# python-challenge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: decisions.md
sample-repository/: README.md  expected-findings.json
sample-repository/app/: config.py
sample-repository/data/: users.json
sample-repository/docs/: example.md
sample-repository/repository-fixtures/clean-repository/: README.md  settings.py
sample-repository/repository-fixtures/positive-repository/app/: settings.py  tokens.txt
sample-repository/repository-fixtures/positive-repository/config/: client.ini
sample-repository/repository-fixtures/positive-repository/docs/: config.md
sample-repository/scanner-fixtures/: clean.txt  expected-results.json  positive.txt
src/python_challenge/: __init__.py  __main__.py  cli.py  rules.py  scanner.py
tests/: test_cli.py  test_repository_scanner.py  test_rules.py  test_sample_repository.py  test_scanner.py
