[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-challenge"
version = "0.1.0"
description = "A small command-line application for practicing Python problem solving."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Neil Walker" },
]
dependencies = []

[project.scripts]
python-challenge = "python_challenge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
